# tiny-lightning-hydra-template

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  environment.yaml  environment.yml  pyproject.toml  requirements.txt  train.py
config/: classifier.yaml  default.yaml  diffusion.yaml  diffusion_image_enhancement.yaml
config/callbacks/: default.yaml  learning_rate_monitor.yaml  model_checkpoint.yaml  wandb_image_logger.yaml
config/core/: default.yaml
config/data/: cifar10-diffusion.yaml  cifar10.yaml  datamodule.yaml  imagenet-corrupted.yaml  imagenet.yaml  imagenette.yaml
config/data/corruption/: blur.yaml  color.yaml  low_resolution.yaml  noise.yaml
config/datamodule/: cifar10.yaml
config/debug/: default.yaml  sanity.yaml
config/experiment/: hps.yaml
config/experiment/diffusion/: basic.yaml  class-conditioning-ddim.yaml  class-conditioning.yaml
config/hydra/: default.yaml
config/logger/: wandb.yaml
config/model/: classifier.yaml  diffusion.yaml  diffusion_image_enhancement.yaml  model.yaml
config/model/diffusion/: ddim.yaml  ddpm.yaml  isb.yaml
config/model/unet/: big.yaml  medium.yaml  small.yaml
config/trainer/: default.yaml
config/wandb/: default.yaml
notebooks/: example.ipynb  metrics.ipynb  test.ipynb
src/: datamodule.py  model.py
src/data/: cifar10.py  corruptions.py  datamodule.py  imagenet.py  imagenette.py
src/datamodules/: cifar10.py
src/models/: classifier.py  diffusion.py  diffusion_image_enhancement.py
src/nets/: resnet18.py  timm.py  unet.py  vae.py
src/nets/diffusion/: __init__.py  gaussian_diffusion.py  isb.py
src/utils/: __init__.py  caching.py  pylogger.py
src/utils/callbacks/: wandb_image_logger.py
