[project]
name = "tiny-lightning-hydra-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "hydra-core>=1.3.2",
    "lightning>=2.6.1",
    "pandas>=2.3.3",
    "rootutils>=1.0.7",
    "torch>=2.11.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.1",
    "ipykernel>=7.2.0",
    "timm>=1.0.26",
    "diffusers>=0.37.1",
    "numpy>=2.0.2",
    "matplotlib>=3.10.8",
    "scipy>=1.13.1",
    "ipywidgets>=8.1.8",
]

[dependency-groups]
dev = ["pre-commit>=4.0.1", "ruff>=0.15.11"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
