[project]
name = "tiny-lightning-hydra-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "hydra-core>=1.3.3",
    "lightning>=2.6.5",
    "pandas>=2.3.3",
    "rootutils>=1.0.7",
    "torch>=2.12.1",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "wandb>=0.28.0",
    "ipykernel>=7.3.0",
    "timm>=1.0.27",
    "diffusers>=0.38.0",
    "numpy>=2.2.6",
    "matplotlib>=3.10.9",
    "scipy>=1.15.3",
    "ipywidgets>=8.1.8",
]

[dependency-groups]
dev = ["pre-commit>=4.6.0", "ruff>=0.15.18"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
